# TEX

./: .coveragerc  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Error-Codes.md  Function-Reference.md  LANGUAGE.md  LICENSE  README.md  SECURITY.md  __init__.py  learn_tex_in_5_minutes.md  pyproject.toml  tex_api.py  tex_cache.py  tex_cli.py  tex_doctor.py  tex_engine.py  tex_fusion.py  tex_help.json  tex_lazy.py  tex_lsp.py  tex_marshalling.py  tex_memory.py  tex_node.py  tex_results.py  tex_roi.py  tex_scheduler.py  tex_session.py  tex_snippets.py  tex_tool.py  tex_validate_hw.py
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md  bench_compile.py  cache3_cold_start.py  eight_config_bench.py  four_scenario_bench.py  fusion_equivalence_test.py  fusion_regression_test.py  fusion_splice_test.py  gpu_cudagraph_test.py  gpu_profile.py  lat4_ab.py  pf1_calibration.py  prlp2_node_path.py  prlp2_sweep.py  run_benchmarks.py  stage5_cast_cost.py  triton_validation.py  v016_bench.py
docs/: bench1-v020-v028.md  lat1b-async-graph-capture.md  live-session-checklist.md  results-caching.md  roadmap.md  roi-spatial-laziness.md  tools.md  xpu-transfer-scheduling.md
editor_build/: package-lock.json  package.json  rollup.config.mjs
examples/: INDEX.md  alpha_over.tex  array_reduce.tex  auto_levels.tex  barrel_distortion.tex  bilateral_approx.tex  billow_texture.tex  binding_access.tex  blur.tex  box_blur.tex  break_search.tex  brightness_contrast.tex  caustics.tex  channel_shuffle.tex  channel_swap.tex  convolve.tex  (+102 more)
(+128 files in other folders)
