[project]
name = "comfyui-tex-wrangle"
description = "TEX (Tensor Expression Language) — per-pixel kernel DSL for ComfyUI"
version = "0.1.0"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "xavinitram" }]
keywords = ["comfyui", "tensor", "expression", "dsl", "image-processing", "vex", "shader"]
dependencies = []

[project.urls]
Repository = "https://github.com/xavinitram/TEX"
Documentation = "https://github.com/xavinitram/TEX#readme"
"Bug Tracker" = "https://github.com/xavinitram/TEX/issues"

[tool.comfy]
PublisherId = "tex"
DisplayName = "TEX Wrangle"
Icon = "default"
